--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
 <p> We understand their challenges and we are not afraid in getting our hands dirty in helping them.  </p>
 </article>
 
+<br>
+<p> Contact us: <a href="mailto: pitch@init-6.fund">pitch@init-6.fund</a></p>
+
 </body>
 </html>
