--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
 
 <article>
-<p> We invest in early stage startups from pre-seed to series A with ticket size from $50k to $1M.  </p>
-<p> We are industry agnostic but we only invest in startups with great founders.  </p>
-<p> Being founders ourselves, we can recognize great founders when we see them.  </p>
+<p> We invest in early stage startups from Angel round to Series A.</p>
+<p> We are industry agnostic but we only invest in startups with great founders.</p>
+<p> Being founders ourselves, we can recognize great founders when we see them.</p>
 <p> We love technical founders with the passion to solve big problems.</p>
-<p> We understand their challenges and we are not afraid in getting our hands dirty in helping them.  </p>
+<p> We understand their challenges and we are not afraid in getting our hands dirty in helping them.</p>
 </article>
 
 <br>
