--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <article>
-<p> We invest in early stage startups from Angel round to Series A.</p>
+<p> We invest in early stage startups.</p>
 <p> We are industry agnostic but we only invest in startups with great founders.</p>
 <p> Being founders ourselves, we can recognize great founders when we see them.</p>
 <p> We love technical founders with the passion to solve big problems.</p>
