--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     color: #5f7982;
   }
 </style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163880740-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163880740-1');
+</script>
 </head>
 <body>
 <pre>
