--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>> init 6</title>
+<title>&gt; init 6</title>
 <style>
   html {
     font-family: Roboto Mono, monospace;
     background-color: #fdf6e3;
-    font-size: 24px;
-    margin-left: 60px;
+    font-size: 20px;
     color: #5f7982;
+    margin-left: 60px;
+  }
+  article {
+    font-family: Georgia, serif;
+    position: relative;
+    max-width: 700px;
+    margin-right: 60px;
+    line-height: 1.6;
+  }
+
+  .command {
+    font-family: Roboto Mono, monospace;
+  }
+
+  .note {
+    font-size: 16px;
   }
 </style>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163880740-1"></script>
@@ -34,15 +49,39 @@
 
 
 <article>
-<p> We invest in early stage startups.</p>
-<p> We are industry agnostic but we only invest in startups with great founders.</p>
-<p> Being founders ourselves, we can recognize great founders when we see them.</p>
-<p> We love technical founders with the passion to solve big problems.</p>
-<p> We understand their challenges and we are not afraid in getting our hands dirty in helping them.</p>
-</article>
+
+<p>
+Our generation is facing one of the greatest challenges of our time. Never before we face something that has such a profound impact on our lives. A simple virus has caught us unprepared. Thousands of people lost their lives, millions lost their job, and millions more have to shut down their businesses. 
+</p>
+
+<p>
+We are all hopeful that someday, a cure will be found and we will come back to “normal”. But chances are, this kind of crisis will have a lasting impact on our way of life. A new normal has to be invented. A new way to work, a new way to learn, a new way to produce, a new way to do business, a new way to keep our health, and finally, a new way to live.
+</p>
+
+<p>
+We believe that we can come out of this time stronger than ever. We believe that we can build a new and better way to live.
+</p>
+
+<p>
+It’s time to rebuild, time to reboot.
+</p>
+
+<p class='command'>
+&gt; init 6
+</p>
+
 
 <br>
-<p> Contact us: <a href="mailto: pitch@init-6.fund">pitch@init-6.fund</a></p>
+<p class='note'>
+We invest in early stage startups to build the new way of life after Covid-19.<br>
+We invest in great founders. We love technical founders with the passion to solve big problems.<br>
+We understand their challenges and we are not afraid of getting our hands dirty in helping them.
+</p>
+<p class='note'>
+Contact us: <a href="mailto: pitch@init-6.fund">pitch@init-6.fund</a>
+</p>
+
+</article>
 
 </body>
 </html>
