--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   .note {
     font-size: 16px;
+    font-style: italic;
   }
 </style>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163880740-1"></script>
