--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>&gt; init 6</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   html {
     font-family: Roboto Mono, monospace;
@@ -10,6 +11,9 @@
     color: #5f7982;
     margin-left: 60px;
   }
+  pre {
+    font-size: 16px;
+  }
   article {
     font-family: Georgia, serif;
     position: relative;
@@ -17,11 +21,9 @@
     margin-right: 60px;
     line-height: 1.6;
   }
-
   .command {
     font-family: Roboto Mono, monospace;
   }
-
   .note {
     font-size: 16px;
     font-style: italic;
@@ -39,11 +41,11 @@
 <body>
 <pre>
 
-   __    _       _ _      __
-   \ \  (_)_ __ (_) |_   / /_
-    \ \ | | '_ \| | __| | '_ \
-    / / | | | | | | |_  | (_) |
-   /_/  |_|_| |_|_|\__|  \___/
+__    _       _ _      __
+\ \  (_)_ __ (_) |_   / /_
+ \ \ | | '_ \| | __| | '_ \
+ / / | | | | | | |_  | (_) |
+/_/  |_|_| |_|_|\__|  \___/
 
 
 </pre>
